snapshot-tests/tests/snapshots/parser__bad_table_names__unterminated_one.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ unterminated_one:1:4
  │
1 │ [']
  │    ^ expected `'`
